--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
       margin: 0 0 10px;
     }
 
-    .field{
-      margin: 10px 0;
-    }
+    .field{ margin: 10px 0; }
 
     .label{
       font-size: 13px;
@@ -161,18 +159,18 @@
       display:flex;
       justify-content:space-between;
       gap: 12px;
-      padding: 6px 0;
+      padding: 8px 0;
       border-bottom: 1px solid #f0f1f3;
       font-variant-numeric: tabular-nums;
     }
     .kv:last-child{ border-bottom:none; }
     .k{ color: var(--muted); font-size: 13px; }
-    .v{ font-weight: 700; font-size: 14px; }
+    .v{ font-weight: 800; font-size: 15px; }
 
     .status{
       font-size: 12px;
       color: var(--muted);
-      margin-top: 6px;
+      margin-top: 8px;
     }
 
     .hidden { display:none !important; }
@@ -247,11 +245,11 @@
     </div>
   </div>
 
-  <div class="wrap" id="app" class="hidden">
+  <div class="wrap hidden" id="app">
     <header>
       <div>
         <h1>Break Even Calculator</h1>
-        <div class="sub">Offline-capable once loaded. Works on iPhone, Android, and PC.</div>
+        <div class="sub">Works on iPhone, Android, and PC.</div>
       </div>
     </header>
 
@@ -319,20 +317,16 @@
 
           <div class="resultBox">
             <div class="blockTitle">Domestic (内外)</div>
-            <div class="kv"><div class="k">Sell ¥/kg (from buy)</div><div class="v" id="domSellYFromBuy">—</div></div>
-            <div class="kv"><div class="k">Sell $/ton (from buy)</div><div class="v" id="domSellUsdTonFromBuy">—</div></div>
-            <div class="kv"><div class="k">Sell ¥/kg (from sell)</div><div class="v" id="domSellYFromSell">—</div></div>
-            <div class="kv"><div class="k">Buy ¥/kg (from sell)</div><div class="v" id="domBuyYFromSell">—</div></div>
+            <div class="kv"><div class="k">損益分岐仕入円 (BE)</div><div class="v" id="domBuyYFromSell">—</div></div>
           </div>
 
           <div class="resultBox">
             <div class="blockTitle">Overseas (外外)</div>
-            <div class="kv"><div class="k">Sell $/ton (from buy)</div><div class="v" id="osSellUsdTonFromBuy">—</div></div>
-            <div class="kv"><div class="k">Buy $/ton (from sell)</div><div class="v" id="osBuyUsdTonFromSell">—</div></div>
+            <div class="kv"><div class="k">損益分岐仕入$ （BE）</div><div class="v" id="osBuyUsdTonFromSell">—</div></div>
           </div>
         </div>
 
-        <div class="status" id="statusText">Enter values to see results.</div>
+        <div class="status" id="statusText">OK.</div>
       </section>
     </div>
   </div>
@@ -375,7 +369,7 @@
   } catch {}
 
   // =========================
-  // Calculator logic (matches your Excel)
+  // Calculator logic
   // =========================
   const el = (id) => document.getElementById(id);
   const inputs = ["domBuyY","domSellUsd","osBuyUsd","osSellUsd","fx","freight","weight"].map(el);
@@ -408,29 +402,19 @@
     const ofUsdTon = ofUsdKg * 1000;
     const ofYKg = ofUsdKg * fx;
 
-    // Domestic forward: Sell ¥/kg = (Buy ¥/kg × 1.1) + 10 + OF¥/kg
-    const domSellYFromBuy = (domBuyY * 1.1) + 10 + ofYKg;
-    const domSellUsdTonFromBuy = (domSellYFromBuy / fx) * 1000;
-
-    // Domestic reverse (given sell $/ton -> buy ¥/kg)
+    // Domestic BE (given sell $/ton -> buy ¥/kg)
     const domSellYFromSell = (domSellUsd * fx) / 1000;
     const domBuyYFromSell = ((domSellYFromSell - ofYKg) - 10) / 1.1;
 
-    // Overseas
-    const osSellUsdTonFromBuy = osBuyUsd + ofUsdTon;
+    // Overseas BE (given sell $/ton -> buy $/ton)
     const osBuyUsdTonFromSell = osSellUsd - ofUsdTon;
 
-    // Render
+    // Render (only what you want)
     el("ofUsdTon").textContent = fmt(ofUsdTon, 2);
     el("ofUsdKg").textContent = fmt(ofUsdKg, 4);
     el("ofYKg").textContent = fmt(ofYKg, 2);
 
-    el("domSellYFromBuy").textContent = fmt(domSellYFromBuy, 2);
-    el("domSellUsdTonFromBuy").textContent = Number.isFinite(domSellUsdTonFromBuy) ? domSellUsdTonFromBuy.toFixed(0) : "—";
-    el("domSellYFromSell").textContent = fmt(domSellYFromSell, 2);
     el("domBuyYFromSell").textContent = fmt(domBuyYFromSell, 2);
-
-    el("osSellUsdTonFromBuy").textContent = fmt(osSellUsdTonFromBuy, 2);
     el("osBuyUsdTonFromSell").textContent = fmt(osBuyUsdTonFromSell, 2);
 
     el("statusText").textContent = "OK.";
@@ -438,7 +422,6 @@
 
   // Auto-calc on input
   inputs.forEach(i => i.addEventListener("input", () => {
-    // only calculate if unlocked
     if (app.classList.contains("hidden")) return;
     calcAndRender();
   }));
